--- a/MatrixMath/CMakeLists.txt
+++ b/MatrixMath/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.7)
-project(Project2)
+project(_Project1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(SOURCE_FILES tail.cpp)
-add_executable(Project2 ${SOURCE_FILES})
+set(SOURCE_FILES p1.cpp Matrix.cpp Matrix.h)
+add_executable(_Project1 ${SOURCE_FILES})
